--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         margin: 0;
         padding: 0;
         background-color: #ffffff;
-        font-family: 'Arial', sans-serif;
+        font-family: 'Verdana', Geneva, sans-serif;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -19,26 +19,28 @@
 
     h1 {
         font-family: 'Georgia', serif;
-        font-size: 2.5rem;
-        color: #333;
-        margin-bottom: 50px;
+        font-size: 3rem;
+        color: #222;
+        margin-bottom: 60px;
+        text-shadow: 0 0 10px #007BFF, 0 0 20px #00f, 0 0 30px #00f;
     }
 
     .btn {
         background-color: #007BFF;
         color: white;
-        padding: 15px 35px;
-        font-size: 1.2rem;
+        padding: 18px 40px;
+        font-size: 1.4rem;
+        font-weight: bold;
         border: none;
-        border-radius: 25px;
+        border-radius: 30px;
         cursor: pointer;
         transition: all 0.3s ease;
-        box-shadow: 0 0 10px rgba(0, 123, 255, 0.5);
+        box-shadow: 0 0 10px rgba(0, 123, 255, 0.6);
     }
 
     .btn:hover {
-        box-shadow: 0 0 20px rgba(0, 123, 255, 0.9);
-        transform: translateY(-2px);
+        box-shadow: 0 0 20px rgba(0, 123, 255, 1), 0 0 30px rgba(0, 123, 255, 0.7);
+        transform: translateY(-3px);
     }
 </style>
 </head>
