--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ar">
 <head>
 <meta charset="UTF-8">
-<title>واجهة بسيطة</title>
+<title> anas algo</title>
 <style>
     body {
         margin: 0;
