--- a/index.html
+++ b/index.html
@@ -5,25 +5,60 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>لصغيرتي وسكرتي شيماء 💍 — أنس</title>
 <style>
+  /* --- الخلفية النجمية --- */
   body {
     margin: 0;
-    font-family: "Segoe UI", sans-serif;
-    background: linear-gradient(180deg, #ffeaf1 0%, #fff4f9 50%, #f7ecff 100%);
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    background: #1a082b; /* خلفية ليلية داكنة */
+    position: relative;
     display: flex;
     align-items: center;
     justify-content: center;
     height: 100vh;
     overflow: hidden;
     flex-direction: column;
-    perspective: 1000px; /* لتمكين التحولات ثلاثية الأبعاد */
+    perspective: 1200px;
+    color: #fff;
   }
+  
+  /* تأثير النجوم المتلألئة */
+  .stars {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background: transparent;
+    pointer-events: none;
+    animation: twinkle 150s linear infinite;
+  }
+  
+  @keyframes twinkle {
+    0% { transform: scale(1) translate(0, 0); }
+    50% { transform: scale(1.05) translate(5px, 5px); }
+    100% { transform: scale(1) translate(0, 0); }
+  }
+
+  .star {
+    position: absolute;
+    width: 2px;
+    height: 2px;
+    background: #ffffff;
+    border-radius: 50%;
+    box-shadow: 0 0 5px #fff, 0 0 10px #ffe5b4;
+    opacity: 0.8;
+  }
+
+  /* --- علبة الخاتم --- */
 
   .box-container {
     position: relative;
-    width: 250px; /* زيادة عرض العلبة */
-    height: 180px; /* زيادة ارتفاع العلبة */
+    width: 250px;
+    height: 180px;
     cursor: pointer;
-    perspective: 800px; /* منظور خاص بالعلبة */
+    perspective: 800px;
+    transform: translateY(0); /* لعدم إخفاء العلبة في النجوم */
+    z-index: 10;
   }
 
   .box {
@@ -36,134 +71,165 @@
   .lid {
     position: absolute;
     width: 100%;
-    height: 100px; /* ارتفاع الغطاء */
-    background: linear-gradient(90deg, #f9c2d1, #ffd6e0);
+    height: 100px;
+    background: linear-gradient(90deg, #9966cc, #cc99ff); /* لون مخملي بنفسجي */
     border-radius: 18px;
     top: 0;
     transform-origin: center bottom;
-    transition: transform 1s cubic-bezier(0.68, -0.55, 0.27, 1.55); /* تأثير فتح أكثر حيوية */
-    box-shadow: 0 8px 16px rgba(0,0,0,0.2);
+    transition: transform 1s cubic-bezier(0.68, -0.55, 0.27, 1.55);
+    box-shadow: 0 10px 20px rgba(0,0,0,0.5), inset 0 5px 10px rgba(255,255,255,0.2);
     z-index: 2;
   }
 
   .base {
     position: absolute;
-    top: 80px; /* لجعل القاعدة تظهر أسفل الغطاء */
+    top: 80px;
     width: 100%;
-    height: 100px; /* ارتفاع القاعدة */
-    background: linear-gradient(90deg, #f9c2d1, #ffd6e0);
+    height: 100px;
+    background: linear-gradient(90deg, #9966cc, #cc99ff);
     border-radius: 18px;
-    box-shadow: 0 4px 8px rgba(0,0,0,0.15);
+    box-shadow: 0 4px 8px rgba(0,0,0,0.3);
     z-index: 1;
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-top: 20px; /* لترك مساحة للخاتم */
   }
 
-  .ring-container {
+  .ring-svg-container {
     position: absolute;
-    top: 50%; /* لتوسيط الخاتم داخل العلبة */
+    top: 50px; /* موضع الخاتم ليظهر داخل العلبة */
     left: 50%;
     transform: translate(-50%, -50%) scale(0);
     transition: transform 1s cubic-bezier(0.68, -0.55, 0.27, 1.55);
     transition-delay: 0.5s;
     z-index: 3;
+    width: 120px;
+    height: 120px;
+    filter: drop-shadow(0 0 15px rgba(255, 255, 255, 0.8)); /* توهج حول الخاتم */
   }
 
-  .ring-container img {
-    width: 120px; /* حجم أكبر للخاتم */
-    height: auto;
-    filter: drop-shadow(0 0 10px rgba(255, 255, 255, 0.8)); /* توهج حول الخاتم */
+  .ring-svg-container svg {
+    width: 100%;
+    height: 100%;
   }
+
+  /* --- اليدين والقمر (تغيير للتركيز على النجوم) --- */
 
   .hands {
     position: absolute;
-    bottom: -80px; /* لجعل اليدين تظهر من الأسفل */
+    bottom: -80px;
     left: 50%;
     transform: translateX(-50%) translateY(100px);
     opacity: 0;
     transition: all 1s ease-out;
     transition-delay: 0.8s;
-    z-index: 0; /* لجعل اليدين خلف العلبة جزئياً */
-    width: 400px; /* عرض اليدين */
-    height: auto;
+    z-index: 0;
+    width: 300px;
+    height: 100px;
   }
 
-  .hands img {
-    width: 100%;
-    height: auto;
-  }
+  /* --- النص والرسالة الجديدة --- */
 
   .poem {
     text-align: center;
-    margin-top: 40px; /* زيادة الهامش العلوي */
+    margin-top: 40px;
     opacity: 0;
-    transform: translateY(60px); /* إزاحة أكبر للنص */
+    transform: translateY(60px);
     transition: all 1s ease-out;
     transition-delay: 1.2s;
-    font-size: 1.5rem; /* حجم خط أكبر */
-    color: #7b3f61;
-    text-shadow: 0 0 10px rgba(255,182,193,0.4), 0 0 20px rgba(255,182,193,0.2); /* توهج أقوى */
+    font-size: 1.5rem;
+    color: #e6e6fa; /* لون فاتح مناسب للسماء الليلية */
+    text-shadow: 0 0 10px #cc99ff, 0 0 20px #9966cc;
     line-height: 1.6;
+    font-weight: 300;
   }
 
   .signature {
-    margin-top: 15px; /* هامش أعلى للتوقيع */
-    font-size: 1.1rem; /* حجم خط أكبر للتوقيع */
-    color: #555;
+    margin-top: 15px;
+    font-size: 1.1rem;
+    color: #bbb;
     font-style: italic;
   }
 
+  /* --- الرسوم المتحركة عند الفتح --- */
+
   .opened .lid {
-    transform: rotateX( -100deg ) translateY(-40px) translateZ(50px); /* تحويل ثلاثي الأبعاد للغطاء */
-    box-shadow: 0 15px 30px rgba(0,0,0,0.3);
+    transform: rotateX( -100deg ) translateY(-40px) translateZ(50px);
   }
 
-  .opened .ring-container {
+  .opened .ring-svg-container {
     transform: translate(-50%, -50%) scale(1);
-    transition-delay: 0.5s;
   }
 
   .opened .hands {
     opacity: 1;
     transform: translateX(-50%) translateY(0);
-    transition-delay: 0.8s;
   }
 
   .opened .poem {
     opacity: 1;
     transform: translateY(0);
-    transition-delay: 1.2s;
   }
 </style>
 </head>
 <body>
 
+<div class="stars" id="stars-background"></div>
+
 <div class="box-container" id="box-container">
   <div class="box">
     <div class="lid"></div>
     <div class="base">
-      <div class="ring-container">
-        <img src="https://i.imgur.com/kS5xJ4X.png" alt="خاتم الماس">
+      <div class="ring-svg-container">
+        <svg viewBox="0 0 120 120" xmlns="http://www.w3.org/2000/svg">
+          <defs>
+            <radialGradient id="gem-new" cx="50%" cy="50%" r="50%">
+              <stop offset="0%" stop-color="#ffffff"/>
+              <stop offset="50%" stop-color="#ccf"/>
+              <stop offset="100%" stop-color="#88c9ff"/>
+            </radialGradient>
+          </defs>
+          <g transform="translate(10,10)">
+            <path d="M50 80 C 75 80, 75 50, 50 50 C 25 50, 25 80, 50 80 Z" fill="#d4af37" stroke="#b8860b" stroke-width="4"/>
+            <rect x="40" y="45" width="20" height="20" fill="#d4af37" transform="rotate(45 50 55)" />
+            
+            <path d="M50 35 L65 20 L80 35 L65 50 L35 50 L20 35 L35 20 Z" fill="url(#gem-new)" stroke="#b3e5ff" stroke-width="2"/>
+            <circle cx="50" cy="35" r="5" fill="#fff" opacity="0.8"/>
+          </g>
+        </svg>
       </div>
     </div>
   </div>
 </div>
 
 <div class="hands" id="hands">
-  <img src="https://i.imgur.com/z6fD6y2.png" alt="يدان تمسكان">
+  <svg viewBox="0 0 400 160" xmlns="http://www.w3.org/2000/svg" width="300" height="160">
+    <path d="M30 140 C80 120, 150 100, 200 100 C250 100, 320 120, 370 140 L370 150 C330 160, 70 160, 30 150 Z" fill="#4d2f63" stroke="#381c4e" stroke-width="2"/>
+    <path d="M10 140 C60 120, 130 100, 180 100 C230 100, 300 120, 350 140 L350 150 C310 160, 50 160, 10 150 Z" fill="#4d2f63" stroke="#381c4e" stroke-width="2"/>
+  </svg>
 </div>
 
 <div class="poem" id="poem">
-  <div>يا شيماء، يا أجمل أقداري</div>
-  <div>يا نور العين، وسر أسراري</div>
-  <div>لكِ قلبي وروحي، لكِ أنفاسي</div>
-  <div>أحبكِ فوق كل الحسابات والمقاييس</div>
+  <div>أتعلمين؟ ضحكتكِ تهزُّ النجومَ في مداراتِها،</div>
+  <div>ولأجلِ جمالِ عينيكِ، سأبرمجُ نجومَ السماءِ لتبرقَ باسمكِ.</div>
   <div class="signature">لصغيرتي وسكرتي شيماء 💍 — أنس</div>
 </div>
 
 <script>
+  // إضافة النجوم بشكل عشوائي
+  const starsBackground = document.getElementById('stars-background');
+  for (let i = 0; i < 150; i++) {
+    const star = document.createElement('div');
+    star.classList.add('star');
+    star.style.top = `${Math.random() * 100}%`;
+    star.style.left = `${Math.random() * 100}%`;
+    star.style.animationDelay = `${Math.random() * 5}s`; /* توقيت التلألؤ */
+    star.style.animationDuration = `${Math.random() * 2 + 1}s`; /* سرعة التلألؤ */
+    star.style.opacity = `${Math.random() * 0.5 + 0.5}`;
+    starsBackground.appendChild(star);
+  }
+
+  // آلية الفتح عند الضغط
   const boxContainer = document.getElementById('box-container');
   boxContainer.addEventListener('click', () => {
     document.body.classList.toggle('opened');
