Update comment in index.html for clarity

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 </div>
 
 <script>
-  // إضافة النجوم بشكل عشوائي
+  // إضافة النجوم بشكل عشوائي نعم
   const starsBackground = document.getElementById('stars-background');
   for (let i = 0; i < 150; i++) {
     const star = document.createElement('div');
